# revolt-hostctl

./: .gitignore  LICENCE  README.md  env.sample  pyproject.toml  repro_parse_cmd.py
.github/workflows/: tests.yml
src/revolt_hostctl/: __main__.py
src/revolt_hostctl/adapters/storage/: shelve_db.py
src/revolt_hostctl/app/: app.py  cli.py  config.py  logger.py  models.py  storage.py  utils.py
src/revolt_hostctl/core/: models.py  storage.py  utils.py
tests/: conftest.py  test_app_unit.py  test_models.py  test_storage_integration_shelve.py  test_storage_unit.py  test_utils.py  utils.py
tests/app/: test_app_methods.py  test_app_unit.py
tests/storage/: test_storage_integration_shelve.py  test_storage_unit.py
